# BMSTU_SEM_4

./: .gitignore  README.md
Computer graphics/lab_01/: itemdelegate.cpp
Computer_graphics/: lab_03_teoria.docx  lab_04_teoria.docx
Computer_graphics/lab_01/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Computer_graphics/lab_02/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Computer_graphics/lab_03/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.cpp  mygraphicsscene.h
Computer_graphics/lab_03/algorithms/: algorithms.cpp  algorithms.h  bresenham.cpp  dda.cpp  wu_alg.cpp
Computer_graphics/lab_03/draw/: draw.cpp  draw.h
Computer_graphics/lab_04/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Computer_graphics/lab_05/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.h
Computer_graphics/lab_06/: point.h  (+13 more)
OOP/lab_03/: CMakeLists.txt  main.cpp  mainwindow.ui
OOP/lab_03/commands/: Command.h  Facade.h
OOP/lab_03/commands/Camera/: CameraCommand.cpp  CameraCommand.h
OOP/lab_03/commands/History/: HistoryCommand.cpp  HistoryCommand.h
OOP/lab_03/commands/Load/: LoadCommand.cpp  LoadCommand.h
OOP/lab_03/commands/Object/: ObjectCommand.cpp  ObjectCommand.h
OOP/lab_03/commands/Scene/: SceneCommand.cpp  SceneCommand.h
OOP/lab_03/data/: cube.adls  cube.ves  cube_45.ves  pyramid.adls
OOP/lab_03/docs/: diagram.drawio  diagram_2.drawio
OOP/lab_03/drawer/: AbstractFactory.h  BaseDrawer.h  DrawerSolution.h  DrawerSolution.hpp
OOP/lab_03/drawer/Qt/: QtDrawer.cpp  QtDrawer.h  QtFactory.cpp  QtFactory.h
OOP/lab_03/exeption/: ArrayException.h  BaseException.h  CastException.h  LoadException.h
OOP/lab_03/history/: CareTaker.cpp  CareTaker.h  Memento.cpp  Memento.h
OOP/lab_03/load/builders/: BuilderSolution.cpp  BuilderSolution.h  ModelBuilder.cpp  ModelBuilder.h
OOP/lab_03/load/builders/MeshModel/: AdjacencyListMeshModelBuilder.cpp  AdjacencyListMeshModelBuilder.h  AdjacencyListMeshModelBuilderFactory.cpp  AdjacencyListMeshModelBuilderFactory.h  MeshModelBuilder.cpp  MeshModelBuilder.h  MeshModelBuilderFactory.cpp  MeshModelBuilderFactory.h  VertexEdgeMeshModelBuilder.cpp  VertexEdgeMeshModelBuilder.h  VertexEdgeMeshModelBuilderFactory.cpp  VertexEdgeMeshModelBuilderFactory.h
OOP/lab_03/load/directors/: MeshModelDirector.cpp  MeshModelDirector.h  MeshModelDirectorFactory.cpp  MeshModelDirectorFactory.h  ModelDirector.cpp  ModelDirector.h  ModelDirectorFactory.cpp  ModelDirectorFactory.h  ModelDirectorSolution.cpp  ModelDirectorSolution.h
OOP/lab_03/load/sources/: AdjacencyListSource.cpp  AdjacencyListSource.h  AdjacencyListSourceFactory.cpp  AdjacencyListSourceFactory.h  ModelSource.cpp  ModelSource.h  ModelSourceFactory.cpp  ModelSourceFactory.h  SourceSolution.cpp  SourceSolution.h  VertexEdgeSource.cpp  VertexEdgeSource.h  VertexEdgeSourceFactory.cpp  VertexEdgeSourceFactory.h
OOP/lab_03/managers/: BaseManager.h  ManagerSolution.cpp  ManagerSolution.h
OOP/lab_03/managers/camera/: CameraManager.cpp  CameraManager.h  CameraManagerCreator.cpp  CameraManagerCreator.h
OOP/lab_03/managers/draw/: DrawManager.cpp  DrawManager.h  DrawManagerCreator.cpp  DrawManagerCreator.h
OOP/lab_03/managers/history/: HistoryManager.cpp  HistoryManager.h  HistoryManagerCreator.cpp  HistoryManagerCreator.h
OOP/lab_03/managers/load/: LoadManager.cpp  LoadManager.h  LoadManagerCreator.cpp  LoadManagerCreator.h
OOP/lab_03/managers/scene/: SceneManager.cpp  SceneManager.h  SceneManagerCreator.cpp  SceneManagerCreator.h
OOP/lab_03/managers/transform/: TransformManager.cpp  TransformManager.h  TransformManagerCreator.cpp  TransformManagerCreator.h
OOP/lab_03/math/: Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h  glm_wrapper.cpp  glm_wrapper.h
OOP/lab_03/objects/: BaseObject.cpp  BaseObject.h  ObjectComposite.cpp  ObjectComposite.h
OOP/lab_03/objects/InvisibleObjects/: InVisibleObject.h  LightSource.cpp  LightSource.h
OOP/lab_03/objects/InvisibleObjects/camera/: BaseCamera.cpp  BaseCamera.h  CameraFactory.cpp  CameraFactory.h  FPSCamera.cpp  FPSCamera.h
OOP/lab_03/objects/InvisibleObjects/camera/adapters/: TraceFPSCameraAdapter.cpp  TraceFPSCameraAdapter.h
OOP/lab_03/objects/VisibleObjects/: VisibleObject.h
OOP/lab_03/objects/VisibleObjects/model/: BaseModel.cpp  BaseModel.h
OOP/lab_03/objects/VisibleObjects/model/MeshModel/: MeshModel.cpp  MeshModel.h
OOP/lab_03/objects_data/MeshModelData/: AdjacencyList.cpp  AdjacencyList.h  AdjacencyListData.cpp  AdjacencyListData.h  Edge.cpp  Edge.h  MeshModelData.cpp  MeshModelData.h  Vertex.cpp  Vertex.h  VertexEdgeData.cpp  VertexEdgeData.h
OOP/lab_03/qt_ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
OOP/lab_03/qt_ui/logic/: Logic.cpp  Logic.h  MetaData.cpp  MetaData.h
OOP/lab_03/scene/: Scene.cpp  Scene.h  SceneGroup.cpp  SceneGroup.h
OOP/lab_03/strategy/draw/: ClipDrawStrategy.cpp  ClipDrawStrategy.h  DrawStrategy.cpp  DrawStrategy.h  SimpleDrawStrategy.cpp  SimpleDrawStrategy.h
OOP/lab_03/transform/: Transformation.cpp  Transformation.h  TransformationData.cpp  TransformationData.h  Transformer.cpp  Transformer.h
OOP/lab_03/transform/move/: MoveTransformer.cpp  MoveTransformer.h
OOP/lab_03/transform/rotate/: RotateTransformer.cpp  RotateTransformer.h
OOP/lab_03/transform/scale/: ScaleTransformer.cpp  ScaleTransformer.h
OOP/lab_03/visitor/: BaseVisitor.h
OOP/lab_03/visitor/draw/: DrawVisitor.cpp  DrawVisitor.h
OOP/lab_04/: CMakeLists.txt  constants.h  main.cpp
OOP/lab_04/cabin/: cabin.cpp  cabin.h
OOP/lab_04/controller/: controller.cpp  controller.h
OOP/lab_04/docs/: diagram.drawio
OOP/lab_04/doors/: doors.cpp  doors.h
OOP/lab_04/elevator/: elevator.cpp  elevator.h
OOP/lab_04/qt_ui/: mainwindow.cpp  mainwindow.h
arch_pc/: Титул_ЛР.docx
lab_01/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_01/draw/: draw.cpp  draw.h
lab_01/geometry/: point.cpp  point.h  points.cpp  points.h  triangle.cpp
lab_01/requests/: requests.h
lab_01/return_codes/: return_codes.h
(+265 files in other folders)
